--- a/style.css
+++ b/style.css
@@ -27,13 +27,14 @@ li {
 
 .book-list {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: center;
   margin: 0 auto;
   width: 100%;
   max-width: 44rem;
   gap: 20rem;
   border-radius: 10px;
+  padding: 0 5px;
 }
 
 .book-list:nth-child(odd) {
