--- a/style.css
+++ b/style.css
@@ -9,9 +9,26 @@ html {
   scroll-behavior: smooth;
 }
 
+/* Header */
 header {
-  padding: 1rem;
-  text-align: center;
+  color: black;
+  padding: 10px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+}
+
+/* Navigation */
+nav {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  border: 3px solid #ccc;
+  border-radius: 5px;
 }
 
 ul {
@@ -23,6 +40,34 @@ ul {
 
 li {
   font-size: 1.6rem;
+}
+
+nav ul {
+  display: flex;
+}
+
+nav ul li {
+  display: inline;
+  margin-right: 10px;
+}
+
+nav ul li a {
+  color: #111;
+  text-decoration: none;
+}
+
+h1 {
+  text-align: center;
+  font-size: 3.2rem;
+  margin: 0;
+  padding: 1rem;
+}
+
+h2 {
+  font-size: 3.2rem;
+  text-align: center;
+  margin: 0;
+  padding: 1rem;
 }
 
 .book-list {
@@ -93,4 +138,26 @@ input {
   margin: 0.5rem 0;
   padding: 0.5rem;
   font-size: 1.6rem;
+}
+
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  max-width: 58rem;
+  margin: 3rem auto;
+  text-align: center;
+}
+
+.hidden {
+  display: none;
+}
+
+/* Footer */
+footer {
+  color: black;
+  text-align: center;
+  border: 3px solid #ccc;
+  border-radius: 10px;
+  margin: 2rem;
 }
